# dcp-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  dcp.yml
dcp/: Cargo.toml
dcp/examples/: dcp.rs
dcp/integration/: main.rs
dcp/src/: lib.rs
dcp/src/io/: client.rs  consts.rs  couchbase.rs  mod.rs  packet.rs  utils.rs
dcp/tests/: integration_test.rs
dcp/tests/scripts/: entrypoint.sh  entrypoint_5.sh
src/: main.rs
