[package]
name = "dcp-rs"
version = "0.0.1"
authors = ["Eray Arslan relfishere@gmail.com"]
license = "Apache-2.0"
keywords = ["dcp", "couchbase", "client"]
categories = ["database"]
description = "Couchbase DCP client library"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
lazy_static = "1.4.0"
rand = "0.8.5"

[[test]]
name = "test"
path = "integration/main.rs"
harness = false