[package]
name = "dcp-rs"
version = "0.0.1"
authors = ["Eray Arslan relfishere@gmail.com"]
license = "Apache-2.0"
keywords = ["dcp", "couchbase", "client"]
categories = ["database"]
description = "Couchbase DCP client library"
edition = "2021"
exclude = [
    "tests/data/*",
    "tests/scripts/*",
]
readme = "../README.md"

[dependencies]
byteorder = "1.5.0"
lazy_static = "1.4.0"
rand = "0.8.5"
log = "0.4.20"

[dev-dependencies]
testcontainers = "0.15.0"
env_logger = { version = "0.10.1", features = [] }
chrono = { version = "0.4.31", features = [] }